<resources>
    <string name="app_name">Youngman Tracker </string>
    <string name="Young_title">Youngman</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Dispatch">Dispatch</string>
    <string name="pickup">Pickup</string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="user_name">Name</string>


    <string-array name="Company">
        <item>Evon</item>
        <item>HCL</item>
        <item>HP</item>
        <item>Ericsson</item>
        <item>TCS</item>
        <item>Dell</item>
        <item>Microsoft</item>
    </string-array>

    <string-array name="Pickupchallan">
        <item>Evon</item>
        <item>HCL</item>
        <item>HP</item>
        <item>Ericsson</item>
        <item>TCS</item>
        <item>Dell</item>
        <item>Microsoft</item>
        <item>Evon</item>
        <item>HCL</item>
        <item>HP</item>
        <item>Ericsson</item>
        <item>TCS</item>
        <item>Dell</item>
        <item>Microsoft</item>
        <item>Evon</item>
        <item>HCL</item>
        <item>HP</item>
        <item>Ericsson</item>
        <item>TCS</item>
        <item>Dell</item>
        <item>Microsoft</item>
    </string-array>
</resources>